fix podcast button spacing

--- a/features/home-podcast.module.css
+++ b/features/home-podcast.module.css
@@ -21,6 +21,9 @@
 .buttons {
 	align-items: center;
 	display: flex;
-	gap: 1rem;
 	margin-top: 2rem;
+}
+
+.buttons > *:first-child {
+	margin-right: 1rem;
 }
